[gd_scene load_steps=6 format=3 uid="uid://c0w7bffyud3s7"]

[ext_resource type="Script" path="res://game/objects/UI.gd" id="1_sa7x1"]
[ext_resource type="PackedScene" uid="uid://cj2ryjlbhxh8b" path="res://game/objects/ui/strum_line.tscn" id="2_fxgad"]
[ext_resource type="PackedScene" uid="uid://btb8naqubifyk" path="res://game/objects/ui/health_bar.tscn" id="7_e1wxe"]
[ext_resource type="FontFile" uid="uid://csunsdevou3rf" path="res://assets/fonts/vcr.ttf" id="8_1567e"]
[ext_resource type="Script" path="res://game/objects/ui/Icon.gd" id="8_ojola"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_sa7x1")

[node name="HealthBar" parent="." instance=ExtResource("7_e1wxe")]
offset_left = 954.8
offset_top = 615.36
offset_right = 353.2
offset_bottom = 596.64

[node name="IconP1" type="Sprite2D" parent="HealthBar"]
script = ExtResource("8_ojola")

[node name="IconP2" type="Sprite2D" parent="HealthBar"]
script = ExtResource("8_ojola")

[node name="Strum_Group" type="CanvasGroup" parent="."]

[node name="Opponent" parent="Strum_Group" instance=ExtResource("2_fxgad")]
position = Vector2(55, 55)

[node name="Player" parent="Strum_Group" instance=ExtResource("2_fxgad")]
position = Vector2(730, 55)
is_cpu = false

[node name="Score_Txt" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -85.0
offset_top = 667.0
offset_right = 138.0
offset_bottom = 684.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("8_1567e")
theme_override_font_sizes/font_size = 19
text = "Score: 0 - Accuracy: [?] - Misses: 0"
horizontal_alignment = 1
vertical_alignment = 1
text_direction = 3
